--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@discordjs/builders": "^1.9.0",
+    "cheerio": "^1.0.0",
     "discord.js": "^14.16.2",
     "dotenv": "^16.4.5",
     "node-fetch": "^3.3.2"
